Bug 89630 - TOC: Problem assigning paragraph style to table of contents level
Summary: TOC: Problem assigning paragraph style to table of contents level
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 Daily
Hardware: Other All
: medium normal
Assignee: Matthew Francis
URL:
Whiteboard: target:4.5.0 target:4.4.3 target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: TableofContents-Indexes
  Show dependency treegraph
 
Reported: 2015-02-24 20:31 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-12-17 08:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (45.82 KB, image/png)
2015-02-24 20:31 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-02-24 20:31:26 UTC
Created attachment 113655 [details]
screenshot

Steps:
1) The TOC dialog
2) Goto styles tab
3) Select an entry and assign a paragraph style
4) A space will be added next to the level style every time a new paragraph style is assigned to the level

This is a regression as 4.2.6 is fine.

Version: 4.5.0.0.alpha0+
Build ID: 4cf69df2f543b023f4ec3d4279c5ac11a2a819d9
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-02-21_03:46:34
Comment 1 A (Andy) 2015-02-24 20:40:41 UTC
Reproducible with LO 4.4.0.3, Win 8.1
Comment 2 Yousuf Philips (jay) (retired) 2015-02-24 22:02:52 UTC
Hey Andy,

As you are confirming alot of my bugs (this isnt important for enhancements), it would be good for you to set their priority as well if possible. :D

https://wiki.documentfoundation.org/QA/BugTriage#Step_7._Prioritize_Bug
https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 3 Matthew Francis 2015-03-28 11:02:55 UTC
This crept in as a simple off-by-one error together with

commit 367d3c9b53b94c727c4a818141c580b740c0ae56
Author: Matteo Casalin <matteo.casalin@yahoo.com>
Date:   Wed Mar 26 21:43:18 2014 +0100

    Use getToken instead of indexOf and re-assignment
    
    Change-Id: If91343c2334f03cd35f95b79b8e341c6ee355f62
Comment 4 Matthew Francis 2015-03-28 11:08:30 UTC
https://gerrit.libreoffice.org/15042
Comment 5 Commit Notification 2015-03-28 12:42:51 UTC
Matthew Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2caa097682e181fe1dfe19d1af1d798ab9af38eb

tdf#89630 Remove extra space added when assigning styles for TOC

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Yousuf Philips (jay) (retired) 2015-03-28 12:43:44 UTC
Thanks Matthew for the quick fix, i've pushed it in. Tried to cherry-picked it for 4.4 in gerrit but it wouldnt let me, so can you push the fix to 4.4.
Comment 7 Adolfo Jayme Barrientos 2015-04-03 09:52:47 UTC
(In reply to Jay Philips from comment #6)
> Thanks Matthew for the quick fix, i've pushed it in. Tried to cherry-picked
> it for 4.4 in gerrit but it wouldnt let me, so can you push the fix to 4.4.

That’s because the original file has diverged between branches, you would have to cherry-pick the change’s dependencies as well to make it apply against that branch.
Comment 8 Yousuf Philips (jay) (retired) 2015-04-05 21:48:04 UTC
Committed it into 4.4 - https://gerrit.libreoffice.org/#/c/15165/
Comment 9 Commit Notification 2015-04-14 20:00:09 UTC
Matthew Francis committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33a67ac2c5e6a60b5a99ebf6767f803277b79148&h=libreoffice-4-4

tdf#89630 Remove extra space added when assigning styles for TOC

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-04-16 21:09:52 UTC
Matthew Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=83d04b17e131663d6ecf4e6c631ada2ade463df8

tdf#89630 Remove extra space added when assigning styles for TOC

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:47:13 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]