tdf#89630 Remove extra space added when assigning styles for TOC

This crept in with commit 367d3c9b53b94c727c4a818141c580b740c0ae56

Change-Id: Ia59d89b6d08b45478ce1c217c7e4004aa52aca06
Reviewed-on: https://gerrit.libreoffice.org/15042
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>